compiler/tests/ar/errors/toplevel_import_not_first.salam
// لغة: العربية
// توقع: E083
ثابت ع := 1

استيراد "std/io"

دالة الرئيسية: نهاية
